--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -3,7 +3,6 @@
     height: 70vh;
     border: 0.3 solid black; 
 }
-
 .style_button:hover{
     color: rgba(255 255 255);
     animation: change 2s ;
@@ -14,10 +13,20 @@
     from{background-color: rgb(255 255 255); }
     to{ background-color: rgb(0 0 0); box-shadow: 5px 5px 9px rgba(0 0 0 /20%); }
 }
+.logout{
+    color: white;
+    font-size: 20px;
+}
+.logout:hover{
+    color: white;
+    background-color: rgba(255 0 0/80%);
+}
 .create-store > img{
    width: 50%;
 }   
-
+.profile{
+    display: none;
+}
 @media only screen and (max-width:700px) {
     .create-store > img{
         display:none;
