--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   input:-ms-input-placeholder { font: inherit; }
   input::-ms-input-placeholder { font: inherit; }
   input::placeholder { font: inherit; }
-  body { background: var(--white); }
+  body { background: var(--white); height: 100vh;}
   /**  scrollbar style  */
   body::-webkit-scrollbar { width: 15px; }
   body::-webkit-scrollbar-track { background: var(--white); border-left: 1px solid var(--cultured); }
@@ -914,34 +914,14 @@
   }
   
   .blog-title {
-    color: var(--eerie-black);
-    font-size: var(--fs-5);
-    font-weight: var(--weight-600);
-    line-height: 1.4;
-    margin-bottom: 5px;
-    -webkit-transition: var(--transition-timing);
-    -o-transition: var(--transition-timing);
+    color: var(--eerie-black); font-size: var(--fs-5); font-weight: var(--weight-600); line-height: 1.4; 
+    margin-bottom: 5px; -webkit-transition: var(--transition-timing); -o-transition: var(--transition-timing); 
     transition: var(--transition-timing);
   }
   
   .blog-title:hover { color: var(--salmon-pink); }
-  
-  .blog-meta {
-    color: var(--sonic-silver);
-    font-size: var(--fs-7);
-  }
-  
-  .blog-meta cite {
-    font-style: normal;
-    color: var(--davys-gray);
-  }
-  
-  
-  
-  
-  
-  
-  
+  .blog-meta { color: var(--sonic-silver); font-size: var(--fs-7);}
+  .blog-meta cite { font-style: normal; color: var(--davys-gray);}  
   
   
   /*-----------------------------------*\
@@ -2254,3 +2234,176 @@
     .slider-item { height: 450px; }
     .banner-content { left: 110px; max-width: 460px;}
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  /* .sidebar {
+    background: var(--white); position: fixed; top: 0; left: -100%;bottom: 0;  width: 100%; max-width: 320px; 
+    padding: 30px; overflow-y: scroll; -ms-scroll-chaining: none;  overscroll-behavior:contain;
+    visibility: hidden; -webkit-transition: 0.5s ease;  -o-transition: 0.5s ease; transition: 0.5s ease; z-index: 20;
+} */
+.sidebar.active {  left: 0;  visibility: visible;   }
+.sidebar-category {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid var(--cultured);
+}
+.sidebar-top {
+    display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex;
+    -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; 
+    justify-content: space-between; -webkit-box-align: center; -webkit-align-items: center;
+    -ms-flex-align: center; align-items: center; margin-bottom: 10px;
+} 
+.sidebar-title {
+  color: var(--onyx); font-size: var(--fs-5); text-transform: uppercase; letter-spacing: 0.8px;
+  font-weight: var(--weight-600);
+}
+.sidebar-close-btn { color: var(--eerie-black); font-size: 22px; font-weight: var(--weight-600); }
+.sidebar-close-btn ion-icon { --ionicon-stroke-width: 50px; }
+.sidebar-accordion-menu {
+    width: 100%; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox;
+    display: flex;  -webkit-box-pack: justify;  -webkit-justify-content: space-between;
+    -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; 
+    -webkit-align-items: center; -ms-flex-align: center; align-items: center; padding: 7px 0;
+}
+.sidebar .menu-title-flex {
+    display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; 
+    -webkit-align-items: center;-ms-flex-align: center; align-items: center; gap: 10px;
+}
+.sidebar .menu-title { font-size: var(--fs-5); color: var(--sonic-silver); font-weight: var(--weight-500); }
+.sidebar-accordion-menu ion-icon {   color: var(--sonic-silver);  font-size: 14px;  --ionicon-stroke-width: 70px; }
+.sidebar-submenu-category-list {
+    border-top: 1px solid var(--cultured);  max-height: 0;  overflow: hidden;  visibility: hidden;
+    -webkit-transition: 0.5s ease-in-out; -o-transition: 0.5s ease-in-out; transition: 0.5s ease-in-out;
+}
+.sidebar-submenu-category-list.active { padding: 13px 0 8px; max-height: 122px; visibility: visible;}
+.sidebar-submenu-title {
+   display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex;
+   -webkit-box-pack: justify; -webkit-justify-content: space-between;     -ms-flex-pack: justify;
+   justify-content: space-between; -webkit-box-align: center; -webkit-align-items: center;
+   -ms-flex-align: center; align-items: center; color: var(--sonic-silver); font-size: var(--fs-7);  padding: 2px 0;
+}
+.sidebar-submenu-title:hover { color: var(--eerie-black); }
+.sidebar .product-name { text-transform: capitalize; }
+.sidebar-accordion-menu.active .add-icon,
+.sidebar-accordion-menu .remove-icon { display: none; }
+.sidebar-accordion-menu .add-icon,
+.sidebar-accordion-menu.active .remove-icon { display: block; } 
+.sidebar .showcase-heading {
+    font-size: var(--fs-5); font-weight: var(--weight-600); color: var(--onyx); text-transform: uppercase;
+    letter-spacing: 0.8px; margin-bottom: 15px;
+}
+.sidebar .showcase {
+    display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center;
+    -webkit-align-items: center; -ms-flex-align: center;  align-items: center;  gap: 15px;
+}
+.sidebar .showcase:not(:last-child) { margin-bottom: 15px; } 
+.sidebar .showcase-img { -webkit-border-radius: var(--border-radius-sm); border-radius: var(--border-radius-sm); }
+.sidebar .showcase-content { width: -webkit-calc(100% - 90px); width: calc(100% - 90px); } 
+.sidebar .showcase-title {
+    color: var(--onyx); font-size: var(--fs-7); font-weight: var(--weight-400); text-transform: capitalize;
+    overflow: hidden; white-space: nowrap; -o-text-overflow: ellipsis; text-overflow: ellipsis; letter-spacing: 0.5px;
+} 
+.sidebar .showcase-rating {
+    display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center;
+    -webkit-align-items: center; -ms-flex-align: center; align-items: center; color: var(--sandy-brown); font-size: 13px;
+    padding: 4px 0;
+} 
+.sidebar .price-box {
+  display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex;
+  -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center;  gap: 15px;
+}
+.sidebar .price-box del { color: var(--sonic-silver); font-size: 13px; } 
+.sidebar .price-box .price { font-size: var(--fs-7); font-weight: var(--weight-600); color: var(--davys-gray); }
+
+@media (min-width: 1024px) {
+    /* .sidebar {
+        --fs-5: 0.941rem;  position: -webkit-sticky;   position: sticky;  top: 30px;  left: 0; padding: 0; 
+        min-width: -webkit-calc(25% - 15px); min-width: calc(25% - 15px); margin-bottom: 30px; visibility: visible;  
+        overflow-y: auto; -ms-scroll-chaining: chained; overscroll-behavior: auto; z-index: 0;
+    } */
+    .sidebar-category {
+        padding: 20px; margin-bottom: 30px; border: 1px solid var(--cultured);
+        -webkit-border-radius: var(--border-radius-md); border-radius: var(--border-radius-md);
+    }
+    .sidebar-close-btn { display: none; }        
+}
+
+
+
+@media (min-width: 1400px) {
+    
+    .sidebar.active {  left: 0; visibility: visible; }
+    .sidebar-category { margin-bottom: 15px; padding-bottom: 15px; border-bottom: 1px solid var(--cultured); }
+    .sidebar-top { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;}
+    .sidebar-title { 
+      color: var(--onyx); font-size: var(--fs-5); text-transform: uppercase;
+      letter-spacing: 0.8px; font-weight: var(--weight-600);
+    }
+    .sidebar-close-btn {  color: var(--eerie-black);  font-size: 22px;  font-weight: var(--weight-600); }
+    .sidebar-close-btn ion-icon { --ionicon-stroke-width: 50px; }
+    .sidebar-accordion-menu {
+      width: 100%;  display: flex; justify-content: space-between; align-items: center; padding: 7px 0;
+    }
+    .sidebar .menu-title-flex {  display: flex;  align-items: center;  gap: 10px; }
+    .sidebar .menu-title { font-size: var(--fs-5); color: var(--sonic-silver); font-weight: var(--weight-500);}
+    .sidebar-accordion-menu ion-icon { color: var(--sonic-silver); font-size: 14px; --ionicon-stroke-width: 70px;}
+    .sidebar-submenu-category-list {  
+      border-top: 1px solid var(--cultured); max-height: 0;  overflow: hidden; visibility: hidden; transition: 0.5s ease-in-out;
+    }
+    .sidebar-submenu-category-list.active { padding: 13px 0 8px; max-height: 122px; visibility: visible; }
+    .sidebar-submenu-title {  display: flex;justify-content: space-between;align-items: center;font-size: var(--fs-7);padding: 2px 0;}
+    .sidebar-submenu-title:hover { color: var(--eerie-black); }
+    .sidebar .product-name { text-transform: capitalize; }
+    .sidebar-accordion-menu.active .add-icon,
+    .sidebar-accordion-menu .remove-icon { display: none; }
+    .sidebar-accordion-menu .add-icon,
+    .sidebar-accordion-menu.active .remove-icon { display: block; }
+    .sidebar .showcase-heading {
+      font-size: var(--fs-5);font-weight: var(--weight-600);color: var(--onyx);text-transform: uppercase;
+      letter-spacing: 0.8px; margin-bottom: 15px;
+    }
+    .sidebar .showcase { display: flex; align-items: center; gap: 15px; }
+    .sidebar .showcase:not(:last-child) { margin-bottom: 15px; }
+    .sidebar .showcase-img { border-radius: var(--border-radius-sm); }
+    .sidebar .showcase-content { width: calc(100% - 90px); }
+    .sidebar .showcase-title {
+      color: var(--onyx);  font-size: var(--fs-7);  font-weight: var(--weight-400);  text-transform: capitalize;
+      overflow: hidden;  white-space: nowrap;  text-overflow: ellipsis;  letter-spacing: 0.5px;
+    }
+    .sidebar .showcase-rating {
+       display: flex; align-items: center; color: var(--sandy-brown); font-size: 13px; padding: 4px 0;
+    } 
+    .sidebar .price-box { display: flex; align-items: center; gap: 15px; } 
+    .sidebar .price-box del { color: var(--sonic-silver); font-size: 13px; }
+    .sidebar .price-box .price { font-size: var(--fs-7); font-weight: var(--weight-600); color: var(--davys-gray);}   
+}
