--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -26,6 +26,8 @@
 }   
 .profile{
     display: none;
+    width: 300px;
+    top:50px;left:0px; z-index:999;
 }
 @media only screen and (max-width:700px) {
     .create-store > img{
