--- a/src/App.css
+++ b/src/App.css
@@ -2325,16 +2325,11 @@
 .sidebar .price-box .price { font-size: var(--fs-7); font-weight: var(--weight-600); color: var(--davys-gray); }
 
 @media (min-width: 1024px) {
-    /* .sidebar {
-        --fs-5: 0.941rem;  position: -webkit-sticky;   position: sticky;  top: 30px;  left: 0; padding: 0; 
-        min-width: -webkit-calc(25% - 15px); min-width: calc(25% - 15px); margin-bottom: 30px; visibility: visible;  
-        overflow-y: auto; -ms-scroll-chaining: chained; overscroll-behavior: auto; z-index: 0;
-    } */
     .sidebar-category {
-        padding: 20px; margin-bottom: 30px; border: 1px solid var(--cultured);
-        -webkit-border-radius: var(--border-radius-md); border-radius: var(--border-radius-md);
+      background-color:#007bff; padding:20px; margin-bottom:30px; border:1px solid var(--cultured);
+      -webkit-border-radius: var(--border-radius-md); border-radius: var(--border-radius-md);
     }
-    .sidebar-close-btn { display: none; }        
+    .sidebar-close-btn { display: none; }
 }
 
 
