--- a/src/component/aside/Aside.css
+++ b/src/component/aside/Aside.css
@@ -1,1 +1,30 @@
 #sidebar{ z-index: 999;}
+.aside-title-link{ display: none;}
+@media only screen and (max-width:1023px){
+    .showcase-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .asideItem{
+        width: 50%;
+        transform: translate(-20%, 0%);
+    }
+}
+
+@media only screen and (max-width:800px){
+   
+    .asideItem{
+        transform: translate(0%, 0%);
+    }
+}
+
+@media only screen and (max-width:550px){
+    .showcase-container {
+        display: static;
+    }
+    .asideItem{
+        width: 90%;
+    }
+    .aside-title-link{ display: block;}
+
+}
