--- a/src/component/create_post/CreatePost.css
+++ b/src/component/create_post/CreatePost.css
@@ -9,18 +9,30 @@
     margin-bottom: 45px;
     margin-top: 30px;
 }
+.create-post-form2{
+    display: flex;
+}
 .CreatePostForm-img{ width: 0; height: 0;}
 .cadre-img{
     width: 40%;
-    height: 300px;
-    margin-top: 20px;
+    height: 275px;
+    margin-top: 25px;
     margin-left: 5%;
     border:2px solid white ;
-    border-radius: 4px;
+    border-radius: 6px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    box-sizing: border-box;
+    border: 2px dashed gray;
+
 }
+
+[class="fa-sharp text fa-regular fa-image"]{
+    font-size:200px
+}
+
 .cadre-title-price{
     width: 50%;
     float: left;
@@ -36,8 +48,7 @@
     margin-bottom: 1rem;
 }
 .from-title{
-    margin-top: 1rem;
-    
+    margin-top: 1rem;   
 }
 .form-default-price , .form-satrt{
     width: 49%;margin-left:1% ; 
@@ -46,6 +57,7 @@
     width: 49%;margin-right:1% ;
 }
 .textarea-description{ width: 95%; margin-top: 1.4rem; resize: none;}
+.Create-Product-BTN{ width: 75%;}
 
 @media only screen and (max-width:900px){
     .create-post-form{
@@ -53,8 +65,28 @@
     }
 }
 
-@media only screen and (max-width:700px){
+@media only screen and (max-width:750px){
     .create-post-form{
-        width:100%;
+        width:98%;
+        margin: 1%;
     }
+    .create-post-form2{
+        display: block;
+    }
+    .cadre-img{
+        width:100%;
+        height: 150px;
+    }
+    .fa-image{
+        font-size: 90px ;
+    }
+    .cadre-title-price{
+        width: 100%;
+    }
+    .cadre-title-price>h3{
+        display: none;
+    }
+    .textarea-description{ width: 100%; margin-top: 0.9rem; resize: none;}
+    .Create-Product-BTN{ width: 100%;}
+
 }
