change add english and arabic version

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-  * , *::before, *::after{   direction:rtl;  text-align:right; }
+  * , *::before, *::after{   
+     margin: 0; padding: 0; -webkit-box-sizing: border-box; box-sizing: border-box;
+  }
   :root {
-    --spanish-gray: hsl(0, 0%, 60%); --sonic-silver: hsl(0, 0%, 47%); --eerie-black: hsl(0, 0%, 13%);
+      --spanish-gray: hsl(0, 0%, 60%); --sonic-silver: hsl(0, 0%, 47%); --eerie-black: hsl(0, 0%, 13%);
       --salmon-pink: hsl(353, 100%, 78%); --sandy-brown: hsl(29, 90%, 65%); --bittersweet: hsl(0, 100%, 70%);
       --ocean-green: hsl(152, 51%, 52%); --davys-gray: hsl(0, 0%, 33%); --cultured: hsl(0, 0%, 93%);
       --white: hsl(0, 100%, 100%);  --onyx: hsl(0, 0%, 27%);
@@ -9,10 +11,12 @@
       --weight-300: 300; --weight-400: 400; --weight-500: 500; --weight-600: 600; --weight-700: 700;
       --border-radius-md:10px; --border-radius-sm:5px; --transition-timing:0.2s ease;
   }
-  * , *::before, *::after {margin: 0; padding: 0; -webkit-box-sizing: border-box; box-sizing: border-box;}
   a { text-decoration: none; }
   li { list-style: none; }
   button { background: none; font: inherit; border: none; cursor: pointer; }
+  .object-cover{object-fit:cover}
+  .object-contain{object-fit:contain}
+  .cursor-pointer{cursor: pointer;}
   img, ion-icon, button, a { display: block; }
   span { display: inline-block; }
   html { font-family: "Poppins", sans-serif; -ms-scroll-chaining: none; overscroll-behavior: contain; }
@@ -2067,7 +2071,7 @@
     /**  #MODAL   */
     .modal-content { display: flex; align-items: center; max-width: 750px; width: fit-content; }
     .newsletter-img { display: block; }
-    .newsletter { text-align: left; }
+    /* .newsletter { text-align: left; } */
 
   
     /** #BANNER   */
@@ -2175,7 +2179,9 @@
     .category-item { min-width: calc(33.33% - 20px); }
     .category-img-box { padding: 10px; }
     /* #PRODUCT  */
-    .product-container .container {position: relative;display: flex; align-items: flex-start;gap: 30px;margin-bottom: 30px;}
+    .product-container .container {
+      position: relative;display: flex; align-items: flex-start;
+      gap: 30px;margin-bottom: 30px;}
     .product-box { min-width: calc(75% - 15px);  }
     .product-minimal { margin-bottom: 20px; }
     .product-minimal .product-showcase {min-width: calc(33.33% - 14px);width: calc(33.33% - 14px);flex-grow: 1;}
